2010-01-13  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: Implement support for Recycling
	  containers along with tests.

2010-01-12  Alan McGovern  <amcgovern@novell.com>

	* GenerationState.cs: Add a variable which indicates whether
	  we should step forwards or backwards from the current
	  element when proceeding to the next element.

	* ItemContainerGenerator.cs: Add tests for the
	  'AllowStartAtRealized' variable as used in
	  IItemContainerGenerator.StartAt and implement the required
	  behaviour. The behaviour seems bizarre to me, so it's
	  probably not quite right. Also fix the case where we
	  generate containers backwards.

2010-01-12  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: Many bugfixes:
	1) Handle creating containers non-sequentially.
	2) We handle the case where a container for the same item is
	  requested multiple times.
	3) We correctly set isNewlyRealized.
	4) RemoveAll now clears the IndexContainerMap.
	5) Once an element is created, the GeneratorPosition is
	  updated correctly for the next round.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Back out the patch to remove containers
	  from the generator as it's causing some regressions in the
	  moonunit tests.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Now that we're using the
	  ItemContainerGenerator to create containers, we should
	  remove them from the Generator when we're done. Fixes some
	  buglets in the SL3 toolkit demo.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* ValidationTest.cs: Add missing license header and put the
	  Validation moon-unit tests in the right place.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* Validation.cs:
	* ValidationTest.cs: Add null checking to the static
	  Validation methods along with moon-units to verify.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* Validation.cs: Add and give an initial implementation for